<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/back_ground_item_metric">

    <TextView
        android:id="@+id/lbl_title_card"
        android:text="@string/heart_rate"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textSize="12sp"
        android:textColor="#1A1613"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_start_end_main"
        android:layout_marginEnd="@dimen/margin_start_end_main"
        android:layout_marginTop="@dimen/margin_start_end_main"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/img_card"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/heart2"
        android:layout_below="@id/lbl_title_card"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/lbl_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_78"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/img_card"
        android:fontFamily="@font/rubik_light"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="#1A1613"/>

    <TextView
        android:id="@+id/lbl_description_card"
        android:layout_below="@id/img_card"
        android:layout_marginTop="15dp"
        android:text="@string/beats_s"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="@dimen/margin_start_end_main"
        android:textSize="14sp"
        android:fontFamily="@font/rubik_light"
        android:textStyle="bold"
        android:textColor="#1A1613"
        android:layout_toEndOf="@id/lbl_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/lbl_last_update_card"
        android:layout_below="@id/lbl_description_card"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/margin_start_end_main"
        android:layout_marginEnd="@dimen/margin_start_end_main"
        android:text="@string/last_update_15h"
        android:textSize="12sp"
        android:textColor="#1A1613"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>